// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsListScreen should render without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsListScreen
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    labels={Array []}
    loading={false}
    onItemPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRefresh={[MockFunction]}
    onRightTabPress={[MockFunction]}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Pad
            height={20}
          />
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <LargeList
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "cost": "123",
                        "day": "Monday",
                        "id": "id",
                        "month": "April",
                        "onPress": [MockFunction],
                        "reward": "string",
                        "status": "pending",
                      },
                    ],
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              onRefresh={[Function]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderFooter={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />
          </View>
        </View>,
        <NavBar
          activeIndex={3}
          hasNotification={false}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
      "testID": "REWARDS_SCREEN",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              height={20}
            />,
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
            />,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginTop": 34,
                }
              }
            >
              <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <LargeList
                data={
                  Array [
                    Object {
                      "items": Array [
                        Object {
                          "cost": "123",
                          "day": "Monday",
                          "id": "id",
                          "month": "April",
                          "onPress": [MockFunction],
                          "reward": "string",
                          "status": "pending",
                        },
                      ],
                    },
                  ]
                }
                groupCount={4}
                groupMinHeight={444.6666666666667}
                heightForIndexPath={[Function]}
                heightForSection={[Function]}
                onRefresh={[Function]}
                refreshHeader={[Function]}
                renderEmpty={[Function]}
                renderFooter={[Function]}
                renderIndexPath={[Function]}
                renderSection={[Function]}
                updateTimeInterval={150}
              />
            </View>,
          ],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />,
              "style": Object {
                "alignItems": "center",
                "marginTop": 34,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeTabIndex": 0,
                "onLeftTabPress": [MockFunction],
                "onRightTabPress": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <LargeList
                data={
                  Array [
                    Object {
                      "items": Array [
                        Object {
                          "cost": "123",
                          "day": "Monday",
                          "id": "id",
                          "month": "April",
                          "onPress": [MockFunction],
                          "reward": "string",
                          "status": "pending",
                        },
                      ],
                    },
                  ]
                }
                groupCount={4}
                groupMinHeight={444.6666666666667}
                heightForIndexPath={[Function]}
                heightForSection={[Function]}
                onRefresh={[Function]}
                refreshHeader={[Function]}
                renderEmpty={[Function]}
                renderFooter={[Function]}
                renderIndexPath={[Function]}
                renderSection={[Function]}
                updateTimeInterval={150}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data": Array [
                  Object {
                    "items": Array [
                      Object {
                        "cost": "123",
                        "day": "Monday",
                        "id": "id",
                        "month": "April",
                        "onPress": [MockFunction],
                        "reward": "string",
                        "status": "pending",
                      },
                    ],
                  },
                ],
                "groupCount": 4,
                "groupMinHeight": 444.6666666666667,
                "heightForIndexPath": [Function],
                "heightForSection": [Function],
                "onRefresh": [Function],
                "refreshHeader": [Function],
                "renderEmpty": [Function],
                "renderFooter": [Function],
                "renderIndexPath": [Function],
                "renderSection": [Function],
                "updateTimeInterval": 150,
              },
              "ref": [Function],
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeIndex": 3,
          "hasNotification": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Pad
              height={20}
            />
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginTop": 34,
                }
              }
            >
              <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <LargeList
                data={
                  Array [
                    Object {
                      "items": Array [
                        Object {
                          "cost": "123",
                          "day": "Monday",
                          "id": "id",
                          "month": "April",
                          "onPress": [MockFunction],
                          "reward": "string",
                          "status": "pending",
                        },
                      ],
                    },
                  ]
                }
                groupCount={4}
                groupMinHeight={444.6666666666667}
                heightForIndexPath={[Function]}
                heightForSection={[Function]}
                onRefresh={[Function]}
                refreshHeader={[Function]}
                renderEmpty={[Function]}
                renderFooter={[Function]}
                renderIndexPath={[Function]}
                renderSection={[Function]}
                updateTimeInterval={150}
              />
            </View>
          </View>,
          <NavBar
            activeIndex={3}
            hasNotification={false}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
        "testID": "REWARDS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={20}
              />,
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
              />,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "marginTop": 34,
                  }
                }
              >
                <RewardTabs
                  activeTabIndex={0}
                  onLeftTabPress={[MockFunction]}
                  onRightTabPress={[MockFunction]}
                />
              </View>,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <LargeList
                  data={
                    Array [
                      Object {
                        "items": Array [
                          Object {
                            "cost": "123",
                            "day": "Monday",
                            "id": "id",
                            "month": "April",
                            "onPress": [MockFunction],
                            "reward": "string",
                            "status": "pending",
                          },
                        ],
                      },
                    ]
                  }
                  groupCount={4}
                  groupMinHeight={444.6666666666667}
                  heightForIndexPath={[Function]}
                  heightForSection={[Function]}
                  onRefresh={[Function]}
                  refreshHeader={[Function]}
                  renderEmpty={[Function]}
                  renderFooter={[Function]}
                  renderIndexPath={[Function]}
                  renderSection={[Function]}
                  updateTimeInterval={150}
                />
              </View>,
            ],
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 20,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <RewardTabs
                  activeTabIndex={0}
                  onLeftTabPress={[MockFunction]}
                  onRightTabPress={[MockFunction]}
                />,
                "style": Object {
                  "alignItems": "center",
                  "marginTop": 34,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeTabIndex": 0,
                  "onLeftTabPress": [MockFunction],
                  "onRightTabPress": [MockFunction],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <LargeList
                  data={
                    Array [
                      Object {
                        "items": Array [
                          Object {
                            "cost": "123",
                            "day": "Monday",
                            "id": "id",
                            "month": "April",
                            "onPress": [MockFunction],
                            "reward": "string",
                            "status": "pending",
                          },
                        ],
                      },
                    ]
                  }
                  groupCount={4}
                  groupMinHeight={444.6666666666667}
                  heightForIndexPath={[Function]}
                  heightForSection={[Function]}
                  onRefresh={[Function]}
                  refreshHeader={[Function]}
                  renderEmpty={[Function]}
                  renderFooter={[Function]}
                  renderIndexPath={[Function]}
                  renderSection={[Function]}
                  updateTimeInterval={150}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data": Array [
                    Object {
                      "items": Array [
                        Object {
                          "cost": "123",
                          "day": "Monday",
                          "id": "id",
                          "month": "April",
                          "onPress": [MockFunction],
                          "reward": "string",
                          "status": "pending",
                        },
                      ],
                    },
                  ],
                  "groupCount": 4,
                  "groupMinHeight": 444.6666666666667,
                  "heightForIndexPath": [Function],
                  "heightForSection": [Function],
                  "onRefresh": [Function],
                  "refreshHeader": [Function],
                  "renderEmpty": [Function],
                  "renderFooter": [Function],
                  "renderIndexPath": [Function],
                  "renderSection": [Function],
                  "updateTimeInterval": 150,
                },
                "ref": [Function],
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 3,
            "hasNotification": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardsListScreen should render without data 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsListScreen
    data={Array []}
    labels={Array []}
    loading={false}
    onItemPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRefresh={[MockFunction]}
    onRightTabPress={[MockFunction]}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Pad
            height={20}
          />
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <LargeList
              data={
                Array [
                  Object {
                    "items": Array [],
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              onRefresh={[Function]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderFooter={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />
          </View>
        </View>,
        <NavBar
          activeIndex={3}
          hasNotification={false}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
      "testID": "REWARDS_SCREEN",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              height={20}
            />,
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
            />,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginTop": 34,
                }
              }
            >
              <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <LargeList
                data={
                  Array [
                    Object {
                      "items": Array [],
                    },
                  ]
                }
                groupCount={4}
                groupMinHeight={444.6666666666667}
                heightForIndexPath={[Function]}
                heightForSection={[Function]}
                onRefresh={[Function]}
                refreshHeader={[Function]}
                renderEmpty={[Function]}
                renderFooter={[Function]}
                renderIndexPath={[Function]}
                renderSection={[Function]}
                updateTimeInterval={150}
              />
            </View>,
          ],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "coins": 1234,
              "onPressLeftIcon": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />,
              "style": Object {
                "alignItems": "center",
                "marginTop": 34,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeTabIndex": 0,
                "onLeftTabPress": [MockFunction],
                "onRightTabPress": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <LargeList
                data={
                  Array [
                    Object {
                      "items": Array [],
                    },
                  ]
                }
                groupCount={4}
                groupMinHeight={444.6666666666667}
                heightForIndexPath={[Function]}
                heightForSection={[Function]}
                onRefresh={[Function]}
                refreshHeader={[Function]}
                renderEmpty={[Function]}
                renderFooter={[Function]}
                renderIndexPath={[Function]}
                renderSection={[Function]}
                updateTimeInterval={150}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data": Array [
                  Object {
                    "items": Array [],
                  },
                ],
                "groupCount": 4,
                "groupMinHeight": 444.6666666666667,
                "heightForIndexPath": [Function],
                "heightForSection": [Function],
                "onRefresh": [Function],
                "refreshHeader": [Function],
                "renderEmpty": [Function],
                "renderFooter": [Function],
                "renderIndexPath": [Function],
                "renderSection": [Function],
                "updateTimeInterval": 150,
              },
              "ref": [Function],
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeIndex": 3,
          "hasNotification": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Pad
              height={20}
            />
            <TopBar
              coins={1234}
              onPressLeftIcon={[MockFunction]}
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "marginTop": 34,
                }
              }
            >
              <RewardTabs
                activeTabIndex={0}
                onLeftTabPress={[MockFunction]}
                onRightTabPress={[MockFunction]}
              />
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <LargeList
                data={
                  Array [
                    Object {
                      "items": Array [],
                    },
                  ]
                }
                groupCount={4}
                groupMinHeight={444.6666666666667}
                heightForIndexPath={[Function]}
                heightForSection={[Function]}
                onRefresh={[Function]}
                refreshHeader={[Function]}
                renderEmpty={[Function]}
                renderFooter={[Function]}
                renderIndexPath={[Function]}
                renderSection={[Function]}
                updateTimeInterval={150}
              />
            </View>
          </View>,
          <NavBar
            activeIndex={3}
            hasNotification={false}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
        "testID": "REWARDS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={20}
              />,
              <TopBar
                coins={1234}
                onPressLeftIcon={[MockFunction]}
              />,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "marginTop": 34,
                  }
                }
              >
                <RewardTabs
                  activeTabIndex={0}
                  onLeftTabPress={[MockFunction]}
                  onRightTabPress={[MockFunction]}
                />
              </View>,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <LargeList
                  data={
                    Array [
                      Object {
                        "items": Array [],
                      },
                    ]
                  }
                  groupCount={4}
                  groupMinHeight={444.6666666666667}
                  heightForIndexPath={[Function]}
                  heightForSection={[Function]}
                  onRefresh={[Function]}
                  refreshHeader={[Function]}
                  renderEmpty={[Function]}
                  renderFooter={[Function]}
                  renderIndexPath={[Function]}
                  renderSection={[Function]}
                  updateTimeInterval={150}
                />
              </View>,
            ],
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 20,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "coins": 1234,
                "onPressLeftIcon": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <RewardTabs
                  activeTabIndex={0}
                  onLeftTabPress={[MockFunction]}
                  onRightTabPress={[MockFunction]}
                />,
                "style": Object {
                  "alignItems": "center",
                  "marginTop": 34,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeTabIndex": 0,
                  "onLeftTabPress": [MockFunction],
                  "onRightTabPress": [MockFunction],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <LargeList
                  data={
                    Array [
                      Object {
                        "items": Array [],
                      },
                    ]
                  }
                  groupCount={4}
                  groupMinHeight={444.6666666666667}
                  heightForIndexPath={[Function]}
                  heightForSection={[Function]}
                  onRefresh={[Function]}
                  refreshHeader={[Function]}
                  renderEmpty={[Function]}
                  renderFooter={[Function]}
                  renderIndexPath={[Function]}
                  renderSection={[Function]}
                  updateTimeInterval={150}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data": Array [
                    Object {
                      "items": Array [],
                    },
                  ],
                  "groupCount": 4,
                  "groupMinHeight": 444.6666666666667,
                  "heightForIndexPath": [Function],
                  "heightForSection": [Function],
                  "onRefresh": [Function],
                  "refreshHeader": [Function],
                  "renderEmpty": [Function],
                  "renderFooter": [Function],
                  "renderIndexPath": [Function],
                  "renderSection": [Function],
                  "updateTimeInterval": 150,
                },
                "ref": [Function],
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 3,
            "hasNotification": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
